@@ -1,9 +1,9 @@
-# $Id$
-## am/recurse.am: Makefile fragment to configure and build subdirs.
-##
-## Copyright 2017      Karl Berry <tex-live@tug.org>
-## Copyright 2013 Peter Breitenlohner <tex-live@tug.org>
-## You may freely use, modify and/or distribute this file.
+## $Id$
+# am/recurse.am: Makefile fragment to configure and build subdirs.
+#
+# Copyright 2017-2020 Karl Berry <tex-live@tug.org>
+# Copyright 2013      Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
 #
 # Requires $(recurse_this) and $(recurse_top).
 # Uses CONF_SUBDIRS and MAKE_SUBDIRS (set by kpse-setup.m4).
