@@ -1,7 +1,7 @@
-# $Id$
+dnl $Id$
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright 2017      Karl Berry <tex-live@tug.org>
+dnl   Copyright 2017-2020 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2009-2013 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
